test/functions/resolution/errors/printAdditionalErrors-1.compopts
                                                     # printAdditionalErrors-1.dflt.good
--print-additional-errors                            # printAdditionalErrors-1.pae.good
--print-additional-errors --print-callstack-on-error # printAdditionalErrors-1.all.good
